change style of #skipNav to prevent horizontal scrolling bug with rtl languages

--- a/root/css/phetpage-v9.css
+++ b/root/css/phetpage-v9.css
@@ -237,8 +237,7 @@ div.rtl .text-right-classic {
 
 #skipNav {
     position: absolute;
-    left: -9999px;
-    width: 9000px;
+    opacity: 0;
     font-size: 1px;
     letter-spacing: -1px;
 }
